<resources>
    <string name="app_name">StudyPath</string>
    <string name="statistics">Statistik Big Five</string>
    <string name="home">Beranda</string>
    <string name="settings">Pengaturan</string>

    <string name="welcome_message">Halo! Selamat Datang,</string>
    <string name="my_personality_card">Kartu Kepribadian Saya</string>
    <string name="my_personality_description_card">Kepribadian Big Five</string>
    <string name="get_study_recommendation">TANYA REKOMENDASI HARI INI</string>
    <string name="waiting_time_format">Tunggu %1$d:%2$02d:%3$02d</string>
    <string name="example_recomendation">Dengan profil kepribadian yang menunjukkan kecenderungan tinggi dalam keterbukaan terhadap pengalaman baru dan kesadaran diri yang kuat, serta kecenderungan rendah dalam ekstroversi, kamu sangat cocok dengan gaya belajar yang mandiri dan mendalam. Manfaatkan kreativitasmu untuk membuat materi pelajaran menjadi lebih menarik, misalnya dengan membuat mind map atau cerita pendek. Disiplin dan tanggung jawab yang tinggi akan membantumu tetap fokus pada tujuan belajar. Meskipun kamu lebih suka belajar sendiri, jangan ragu untuk mencari kelompok belajar kecil untuk mendiskusikan materi yang sulit. Kelola stres dengan baik agar kamu bisa selalu optimal dalam belajar.</string>
    <string name="dummy_wait">Terakhir Diperbarui: 1 Hari Lalu</string>

    <!-- Onboarding Screen Contents -->
    <string name="onboarding_title_1">Selamat Datang di StudyPath!</string>
    <string name="onboarding_desc_1">Hai, Teman-teman! Pernah bingung gimana cara belajar yang pas buat kamu? Yuk, bareng StudyPath, kita cari tahu gaya belajar yang seru dan cocok banget sama kepribadian kamu!</string>

    <string name="onboarding_title_2">Belajar Lebih Personal</string>
    <string name="onboarding_desc_2">Gaya belajar setiap orang beda, loh! StudyPath pakai Lima Dimensi Kepribadian buat bantu kamu tahu cara belajar yang paling efektif sesuai dengan karakter kamu.</string>

    <string name="onboarding_title_3">Rekomendasi Belajar Keren</string>
    <string name="onboarding_desc_3">Bayangin belajar dengan tips yang pas banget buat kamu. Dengan StudyPath, kamu bisa belajar lebih produktif dan jauh dari stres. Asik, kan?</string>

    <string name="onboarding_title_4">Teknologi Canggih di Balik StudyPath</string>
    <string name="onboarding_desc_4">Didukung teknologi machine learning, StudyPath kasih rekomendasi belajar berbasis data, jadi semua saran belajar kami pasti sesuai dengan kebutuhan kamu.</string>

    <string name="onboarding_title_5">Waktunya Belajar Tanpa Beban</string>
    <string name="onboarding_desc_5">Belajar itu nggak harus ribet. Dengan strategi yang sesuai kepribadian kamu, StudyPath bantu kamu belajar lebih nyaman, santai, dan percaya diri!</string>
    <!--*****************-->

    <string name="start">Mulai</string>
    <string name="next">Lanjut</string>
    <string name="enter">Masuk</string>
    <string name="has_data">Sepertinya kamu sudah memiliki data kepribadian sebelumnya</string>
    <string name="has_no_data">Ayo cari tahu kepribadianmu dengan mengikuti tes berikut</string>
    <string name="take_test">Ikuti Tes</string>
    <string name="load_data">Muat Data</string>
    <string name="refresh_data">Perbarui Data</string>
    <string name="image_illustration_for_login">Ilustrasi Gambar untuk Login</string>
    <string name="login_with_google">Masuk dengan Google</string>
    <string name="start_your_study_path">Ayo Mulai Perjalanan Belajarmu</string>
    <string name="login_description">Yuk, temukan cara belajar paling seru dan efektif yang dirancang khusus buat kamu! Maksimalkan potensimu dan jadikan belajar lebih asyik bareng StudyPath!</string>
    <string name="username">StudyPath User</string>
    <string name="email_user">studypath@gmail.com</string>
    <string name="text_edit_profile_btn">Edit Profil</string>
    <string name="theme_title">Tema</string>
    <string name="theme_subtitle">Mode Terang</string>
    <string name="preference_title">Tes Preferensi</string>
    <string name="preference_subtitle">Pengingat untuk Tes Ulang Kepribadian Big Five</string>
    <string name="about_our_app_title">Tentang Aplikasi Kami</string>
    <string name="about_our_app_subtitle">Aplikasi Ini Mempersonalisasi Strategi Belajar Berdasarkan Kepribadian Unik Dan Gaya Belajar Siswa, Menggunakan Wawasan Big Five Untuk Meningkatkan Efektivitas Pembelajaran Dan Memenuhi Kebutuhan Dukungan Pendidikan Yang Dipersonalisasi.</string>
    <string name="logout_text_btn">Keluar</string>
    <string name="your_name">Namamu Siapa?</string>
    <string name="enter_your_name">Masukkan Namamu</string>
    <string name="save">Simpan</string>
    <string name="chart_base_on_big_five">Diagram Berdasarkan Big Five</string>

    <string name="openness">KETERBUKAAN TERHADAP PENGALAMAN</string>
    <string name="neuroticism">KESTABILAN EMOSI</string>
    <string name="extroversion">KETERBUKAAN SOSIAL, ENERGI DAN ANTUSIASME</string>
    <string name="conscientiousness">KETELITIAN</string>
    <string name="agreeableness">KESEPAKATAN</string>
    <string name="click_to_view">Klik Untuk Membaca Rekomendasi</string>
    <string name="current_level">Jenjang Sekolahmu Apa?</string>
    <string name="current_education">Jenjang Sekolahmu Saat Ini</string>
    <string name="current_age">Rentang Usia Kamu</string>
    <string name="your_age_range">Rentang Usiamu Saat Ini</string>
    <string name="next_stage">LANJUT KE TAHAP SELANJUTNYA</string>
    <string name="celebrate_progress_quiz">HORE! KAMU SUDAH MENYELESAIKAN TES %1$s</string>
    <string name="quiz_progress">%1$d/5</string>
    <string name="quiz_question">%1$d/10</string>
    <string name="neutral">Netral</string>
    <string name="minus_1">-1</string>
    <string name="minus_2">-2</string>
    <string name="plus_1">+1</string>
    <string name="plus_2">+2</string>
    <string name="diagram_radar">Diagram Radar</string>
    <string name="explain_radar">Penyajian Dalam Bentuk Radar Statistik</string>
    <string name="diagram_bar">Diagram Bar</string>
    <string name="explain_bar">Penyajian Dalam Bentuk Balok</string>
    <string name="your_gender">Gendermu Apa?</string>
    <string name="your_birth_date">Kapan Tanggal Lahirmu?</string>
    <string name="enter_your_birth_date">Masukkan Tanggal Lahirmu</string>
    <string name="name">Nama</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="choose_date">Pilih Tanggal</string>
    <string name="choose_time">Pilih Jam</string>
    <string name="set_reminder">Atur Pengingat</string>
    <string name="text_btn_ulangi_kuis">Ulangi Tes Big Five</string>
    <string name="answer_guide">Petunjuk: Pilih salah satu emoji di atas yang paling pas buat nunjukin perasaan kamu tentang situasi itu!</string>
</resources>