<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center_vertical"
    android:paddingHorizontal="@dimen/padding_large"
    tools:context=".ui.activity.LoginActivity">

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:scrollbars="none"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">

            <ImageView
                android:id="@+id/login_illustration"
                android:layout_width="wrap_content"
                android:layout_height="240dp"
                android:contentDescription="@string/image_illustration_for_login"
                android:src="@drawable/undraw_login_access_account" />

            <TextView
                android:id="@+id/title_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:textAlignment="center"
                android:text="@string/start_your_study_path"
                android:textAppearance="@style/Theme.StudyPath.Text.Bold"
                android:textSize="24sp"/>

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/login_description"
                android:textAlignment="center"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:paddingVertical="10dp"
                app:cornerRadius="@dimen/corner_radius_medium"
                android:text="@string/login_with_google"
                android:textAppearance="@style/Theme.StudyPath.Text.Medium"
                android:textColor="@color/md_theme_primary"
                android:backgroundTint="@color/md_theme_inverseOnSurface_highContrast"
                app:strokeColor="@color/md_theme_primary"
                app:strokeWidth="2dp"
                app:icon="@drawable/ic_google_svgrepo"
                app:iconGravity="textStart"
                app:iconTint="@null"
                app:iconSize="32dp" />
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>