<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingHorizontal="@dimen/padding_large"
    android:scrollbars="none"
    tools:context=".ui.fragment.SettingsFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/settings_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_large"
        android:alpha="0"
        tools:alpha="1">

        <!--  Header Settings  -->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/user_data"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/profile_pict"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:importantForAccessibility="no"
                android:src="@drawable/undraw_male_avatar"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_large"
                android:height="30dp"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@string/username"
                android:textAppearance="@style/Theme.StudyPath.Text.Bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/profile_pict"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/email_user"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_large"
                android:text="@string/email_user"
                android:textAppearance="@style/Theme.StudyPath.Text.Medium"
                android:textSize="@dimen/text_size_small"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/profile_pict"
                app:layout_constraintTop_toBottomOf="@+id/username" />

            <!-- Theme Settings   -->
            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_edit_profile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_large"
                android:layout_marginTop="@dimen/margin_large"
                android:paddingHorizontal="@dimen/padding_small"
                android:text="@string/text_edit_profile_btn"
                android:textAppearance="@style/Theme.StudyPath.Text.Bold"
                android:textColor="@android:color/white"
                android:textSize="@dimen/text_size_small"
                app:cornerRadius="@dimen/corner_radius_small"
                app:layout_constraintBottom_toBottomOf="@+id/profile_pict"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/profile_pict"
                app:layout_constraintTop_toBottomOf="@+id/email_user" />

            <ProgressBar
                android:id="@+id/loading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:visibility="visible" />
        </androidx.constraintlayout.widget.ConstraintLayout>


        <TextView
            android:id="@+id/theme_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_large"
            android:text="@string/theme_title"
            android:textAppearance="@style/Theme.StudyPath.Text.Bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/user_data" />

        <TextView
            android:id="@+id/theme_subtitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/theme_subtitle"
            android:textAppearance="@style/Theme.StudyPath.Text.LightBody"
            app:layout_constraintEnd_toStartOf="@+id/switch_theme"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/theme_title" />

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/switch_theme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@+id/theme_subtitle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/theme_subtitle"
            app:thumbTint="@color/md_theme_primary"
            app:trackTint="@color/md_theme_surfaceVariant" />

        <!-- Preferensi Test Setting   -->
        <TextView
            android:id="@+id/preference_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_large"
            android:text="@string/preference_title"
            android:textAppearance="@style/Theme.StudyPath.Text.Bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/theme_subtitle" />

        <TextView
            android:id="@+id/preference_subtitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/preference_subtitle"
            android:layout_marginEnd="@dimen/margin_large"
            android:textAppearance="@style/Theme.StudyPath.Text.LightBody"
            app:layout_constraintEnd_toStartOf="@+id/btn_reminder"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/preference_title" />

        <ImageButton
            android:id="@+id/btn_reminder"
            style="@style/Widget.AppCompat.Button.Small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintDimensionRatio="1:1"
            android:background="@drawable/bg_radius_medium"
            android:backgroundTint="@color/md_theme_primary"
            android:contentDescription="@string/set_reminder"
            android:src="@drawable/baseline_access_time_filled_24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/preference_subtitle"
            app:thumbTint="@color/md_theme_primary"
            app:tint="@android:color/white"
            app:trackTint="@color/md_theme_surfaceVariant" />

        <!-- About App   -->
        <TextView
            android:id="@+id/about_app_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_large"
            android:text="@string/about_our_app_title"
            android:textAppearance="@style/Theme.StudyPath.Text.Bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_reminder" />

        <TextView
            android:id="@+id/about_app_subtitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/about_our_app_subtitle"
            android:textAppearance="@style/Theme.StudyPath.Text.LightBody"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/about_app_title" />

        <!--  Logout Button  -->
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_logout"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="64dp"
            android:backgroundTint="@color/md_theme_error"
            android:text="@string/logout_text_btn"
            android:textAppearance="@style/Theme.StudyPath.Text.Button"
            android:textColor="@android:color/white"
            app:cornerRadius="@dimen/corner_radius_large"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/about_app_subtitle" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>